<resources>
    <string name="app_name">Mi Malabo</string>
    <string name="changeLang"> change Language</string>
    <string name="hotel_details"> Top Hotel</string>
    <string name="know_malabo"><b> Malabo </b></string>
    <string name="places_details"> Most Visited Places </string>
    <string name="res_details"> Best Restaurants in Town </string>
    <string name="Urban_details"><i><b> Top Urban Events </b></i>  </string>
    <string name="Tribe_details"><i><b> Tribe in Malabo </b></i>  </string>
    <string name="urban_life">Urban Life</string>
    <string name="appdrawer">Mi malabo</string>
    <string name="welcome"> Welcome to Malabo </string>
    <string name="open_navigation"> Open Navigation Drawer </string>
    <string name="close_navigation"> Close Navigation Drawer </string>
    <string name="Malabo_Hist"> Malabo History </string>
    <string name="EG_Hist"> Country History </string>
    <string name="help"> Help </string>
    <string name="feedback"> Give us a Feedback</string>
    <string name="support"> Support </string>
    <string name="settings"> Settings </string>
    <string name="common_places"> Common Places </string>
    <string name="restaurants"><i><b> Restaurants </b></i></string>
    <string name="hotels"><b> Hotels </b></string>
    <string name="urban"><i><b> Urban </b></i>  </string>
    <string-array name="people">
        <item> Fang </item>
    </string-array>
    <string name="hotel_tab">hotel</string>
    <string name="urban_tab">Urban</string>
    <string name="people_tab">people</string>
    <string name="restaurants_tab">food</string>
    <string name="places_tab">Places</string>
    <string name="display_map">Display map</string>
    <string name="maps"> Get Directions </string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="guinea_ecuatorial_nombre"> History of Guinea Ecuatorial </string>
    <string name="eg_tab">Guinea Ecuatorial </string>
    <string name="population_title"><b> Population </b> </string>
    <string name="population"> The current population of Equatorial Guinea in 2021 is 1,449,896, an increase of 3.34% from 2020.</string>
    <string name="historia_de_malabo">History of Malabo</string>
    <string name="malabo"><b> Malabo </b></string>
    <string name="malabo_history"><b>Malabo, before (until 1973) Santa Isabel, capital of Equatorial Guinea</b>. It is located at the northern end of the island of Bioko (or Fernando Po) on the edge of a sunken volcano.
        With an average temperature of 77 ° F (25 ° C) and an annual rainfall of 75 inches (1,900 mm), it has one of the most onerous climates in Biafra Inlet (Gulf of Guinea).
        Malabo is the commercial and financial center of the republic.\n\nIts port, which is one of the deepest seaports in the region, can dock several ships and the main
        activity is the export of cocoa, wood and coffee. It also has an international airport with flights to Bata, in continental Equatorial Guinea, and to countries in Africa and Europe, and to the United States.
        The European population of the city declined after the 1969 riots, and later after its Nigerian contract workers returned to Nigeria in the mid-1970s.\n\nThe discovery and development of the country\'s oil reserves in the 1980s and 1990s led to increased business and development in the city. Popular. (2003 est.) 92,900.</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="to">To</string>
    <string name="send_feedback">Send Feedback</string>
</resources>