<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar11"
        android:background="@color/colorCulture"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


    <TextView
        android:id="@+id/egHistName"
        android:text="@string/historia_de_malabo"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:layout_margin="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#131313"
        android:shadowRadius="2"
        android:shadowDx="1"
        android:shadowDy="1"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/catedral_de_santa_isabel"
        android:padding="1dp"
        android:paddingBottom="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:shadowColor="#141515"
        android:shadowRadius="2"
        android:shadowDx="1"
        android:shadowDy="1"
        android:id="@+id/egHistImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:shadowColor="#141515"
        android:shadowRadius="2"
        android:shadowDx="1"
        android:shadowDy="1"
        android:id="@+id/malaboTitle1"
        android:text="@string/population_title"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:shadowColor="#141515"
            android:shadowRadius="2"
            android:shadowDx="1"
            android:shadowDy="1"
            android:textSize="15sp"
            android:id="@+id/malabopop"
            android:text="@string/population"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:shadowColor="#141515"
            android:shadowRadius="2"
            android:shadowDx="1"
            android:shadowDy="1"
            android:id="@+id/malaboTitle"
            android:text="@string/malabo"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:padding="10dp"
            android:shadowColor="#141515"
            android:shadowRadius="2"
            android:shadowDx="1"
            android:shadowDy="1"
            android:textSize="15sp"
            android:id="@+id/malaboInfo"
            android:text="@string/malabo_history"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>


</ScrollView>